--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <section class="intro jumbotron">
         <div class="container text-center pb-4 pt-1">
             <div class="content">
-                <!-- <h4>What we offer</h4> -->
+                <h4>What we offer</h4>
                 <h1>Welcome To Us</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam explicabo ex harum aliquam libero,
                     itaque esse. Cumque repellat voluptas non eaque harum esse dolorum in ut saepe. Enim, nihil
@@ -160,13 +160,12 @@
         </div>
     </section>
 
-
     <!-- product slider -->
     <section class="product-slider jumbotron">
         <div class="container text-center pb-4 pt-1">
             <div class="content">
                 <!-- <h4>What we offer</h4> -->
-                <h1>Our Featured Products</h1>
+                <h1>Featured Products</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam explicabo ex harum aliquam libero.</p>
             </div>
         </div>
@@ -186,7 +185,29 @@
                 </div>
                 <div class="col">
                     <div class="img-container">
-                        <img src="./img/product-slider/1.jpg" alt="">
+                        <img src="./img/product-slider/2.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/3.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/4.jpg" alt="">
                     </div>
                     <div class="body-container">
                         <h4>Heading</h4>
@@ -208,7 +229,7 @@
                 </div>
                 <div class="col">
                     <div class="img-container">
-                        <img src="./img/product-slider/1.jpg" alt="">
+                        <img src="./img/product-slider/3.jpg" alt="">
                     </div>
                     <div class="body-container">
                         <h4>Heading</h4>
@@ -222,9 +243,100 @@
     </section>
 
 
+    <!-- Exlusive Items -->
+    <section class="exlusive-banner jumbotron">
+        <div class="container">
+            <div class="bg-img">
+                <p>SHOP UNIQUE HAND MADE ITEMS</p>
+                <h3>Exclusive Items Created With Love</h3>
+                <a href="#">See More</a>
+            </div>
+        </div>
+    </section>
 
 
 
+    <!-- product slider -->
+    <section class="product-slider jumbotron">
+        <div class="container text-center pb-4 pt-1">
+            <div class="content">
+                <!-- <h4>What we offer</h4> -->
+                <h1>Featured Products</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam explicabo ex harum aliquam libero.</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row product-slider-inner">
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/1.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/2.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/3.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/4.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/1.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="img-container">
+                        <img src="./img/product-slider/3.jpg" alt="">
+                    </div>
+                    <div class="body-container">
+                        <h4>Heading</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quod perferendis.</p>
+                        <!-- <button type="button" class="btn btn-danger">More</button> -->
+                        <a href="#">More Detail <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
